--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,10 @@ jobs:
 
     runs-on: windows-latest
 
-    steps:
-    - name: Install download tool
-      run: dotnet tool install -g dotnetCampus.FileDownloader.Tool
-    - name: Install send mail tool
-      run: dotnet tool install -g dotnetCampus.SendEmailTask
-
-    - name: Download File
-      run: DownloadFile -u [替换为你的下载链接] -o file.zip
-    - name: Send file
-      run: SendEmail -t mzbgf@foxmail.com -s "SendFile" -b "File" --Files file.zip --SmtpServer smtp.yandex.com --SmtpServerPort 587 --UserName lindexi@yandex.com --Password miBN8dFLxdUs9d3
+    steps: 
+    - name: Project=XayahSuSuSu/Android-DataBackup
+      run: Project=XayahSuSuSu/Android-DataBackup
+    - name: tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
+      run: tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
+    - name: curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
+      run: curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
