--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,40 @@ on: [push]
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-20.04
 
     steps: 
-    - name: Project=XayahSuSuSu/Android-DataBackup
-      run: Project=XayahSuSuSu/Android-DataBackup
-    - name: tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
-      run: tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
-    - name: curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
-      run: curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
+    - name: |
+        Project=XayahSuSuSu/Android-DataBackup
+        tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
+        curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
+      run: |
+        Project=XayahSuSuSu/Android-DataBackup
+        tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
+        curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
+
+
+    - name: Organize files
+      id: organize
+      run: |
+        echo "FILE=$PWD" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+
+    - name: Upload firmware to release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        body_path: release.txt
+        files: ${{ env.FILE }}/*
+        
+        
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.1.0
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      with:
+        keep_latest: 3
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
