--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         echo "FILE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
+        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
 
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
