--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,15 @@ jobs:
       run: |
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
+        echo "There is nothing..." >> release.txt
         echo "::set-output name=status::success"
 
-    - name: Upload firmware to release
+    - name: Upload file to release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
+        tag_name: $(date +"%Y.%m.%d-%H%M")
         body_path: release.txt
         files: ${{ env.FILE }}/*
         
