--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
         curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
       run: |
+        mkdir /Downloadfile && cd /Downloadfile
         Project=XayahSuSuSu/Android-DataBackup
         tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
         curl -O https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk
@@ -39,7 +40,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ${{ env.FILE }}/*
+        files: /Downloadfile/*
         
         
     - name: Remove old Releases
