--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,15 @@ jobs:
         curl https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk -o DataBAckup${tag}.apk
       run: |
         mkdir Downloadfile && cd Downloadfile
-        path_pwd=$(pwd)
         Project=XayahSuSuSu/Android-DataBackup
         tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
         curl https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk -o DataBAckup${tag}.apk
 
+    - name: Organize files
+      id: organize
+      run: |
+        echo "FILE=$PWD" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
 
     - name: Generate release tag
       id: tag
@@ -35,7 +39,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: $path_pwd
+        files: ${{ env.FILE }}/*
         
         
     - name: Remove old Releases
