--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       id: tag
       run: |
         echo "::set-output name=release_tag::file_transfer_v$(date +"%m.%d-%H%M")"
-        touch release.txt
+        touch ../release.txt
         echo "::set-output name=status::success"
 
     - name: Upload file to release
@@ -38,7 +38,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
+        body_path: ../release.txt
         files: ${{ env.FILE }}/*
         
         
