--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ jobs:
     - name: wget XayahSuSuSu/Android-DataBackup
       run: |
         cd /home/runner/work/auto-down/auto-down/
-        Project=$(echo ${{ env.GITHUB_ACTION }}|cut -d ' ' -f 2)
+        Project=XayahSuSuSu/Android-DataBackup
         tag=$(wget -qO- -t1 -T2 "https://api.github.com/repos/${Project}/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
         wget https://github.com/${Project}/releases/download/${tag}/DataBAckup-${tag}.apk  --directory-prefix=download
 
