--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,7 @@ jobs:
       id: tag
       run: |
         echo "FILE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=release_tag::file_transfer_v$(date +"%m.%d-%H%M")"
+        echo "::set-output name=release_tag::$(date +"%m.%d-%H%M")"
         touch release.txt
         echo "::set-output name=status::success"
 
